--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -1,6 +1,11 @@
 {
     "latest": "version-1.1",
     "versions": {
+		"version-1.2": {
+            "name": "Version 1.2",
+            "details" : "TestPatch",
+            "url": "https://raw.githubusercontent.com/SlayerIbn/undertale-worldwide/main/versions/version-1.2.xdelta"
+        },
         "version-1.1": {
             "name": "Version 1.1",
             "details" : "Nose detalles de la actualizacion.",
